--- a/package.json
+++ b/package.json
@@ -17,5 +17,9 @@
   "bugs": {
     "url": "https://github.com/kimanikelly/The-Aux/issues"
   },
-  "homepage": "https://github.com/kimanikelly/The-Aux#readme"
+  "homepage": "https://github.com/kimanikelly/The-Aux#readme",
+  "dependencies": {
+    "express": "^4.17.1",
+    "nodemon": "^2.0.2"
+  }
 }
