--- a/package.json
+++ b/package.json
@@ -21,7 +21,10 @@
   "dependencies": {
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "mongoose": "^5.8.7",
     "nodemon": "^2.0.2",
+    "passport": "^0.4.1",
+    "passport-spotify": "^1.1.0",
     "path": "^0.12.7"
   }
 }
