--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js"
-  }, 
+  },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/kimanikelly/The-Aux.git"
@@ -23,10 +23,13 @@
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "express-react-views": "^0.11.0",
     "mongoose": "^5.8.7",
     "nodemon": "^2.0.2",
     "passport": "^0.4.1",
     "passport-spotify": "^1.1.0",
-    "path": "^0.12.7"
+    "path": "^0.12.7",
+    "react": "^16.12.0",
+    "react-dom": "^16.12.0"
   }
 }
