--- a/client/package.json
+++ b/client/package.json
@@ -12,7 +12,8 @@
     "react-helmet": "^5.2.1",
     "react-router-dom": "^5.1.2",
     "react-script-tag": "^1.1.2",
-    "react-scripts": "3.3.0"
+    "react-scripts": "3.3.0",
+    "react-spotify-player": "^1.0.4"
   },
   "scripts": {
     "start": "react-scripts start",
