Set the background image for the Login and Home components

--- a/client/package.json
+++ b/client/package.json
@@ -22,7 +22,8 @@
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
-    "extends": "react-app"
+    "extends": "react-app",
+    "Access-Control-Allow-Origin": "*"
   },
   "browserslist": {
     "production": [
