--- a/client/package.json
+++ b/client/package.json
@@ -13,7 +13,8 @@
     "react-router-dom": "^5.1.2",
     "react-script-tag": "^1.1.2",
     "react-scripts": "3.3.0",
-    "react-spotify-player": "^1.0.4"
+    "react-spotify-player": "^1.0.4",
+    "spotify-web-api-js": "^1.2.0"
   },
   "scripts": {
     "start": "react-scripts start",
