--- a/client/package.json
+++ b/client/package.json
@@ -15,6 +15,7 @@
     "react-scripts": "3.3.0",
     "react-spotify-player": "^1.0.4",
     "react-spotify-web-playback": "^0.6.0",
+    "spotify-control": "^0.1.0",
     "spotify-web-api-js": "^1.2.0",
     "use-spotify-web-playback-sdk": "^0.2.2"
   },
