The current song playing in the spotify playback is retrieved in the console

--- a/client/package.json
+++ b/client/package.json
@@ -17,6 +17,7 @@
     "react-spotify-web-playback": "^0.6.0",
     "spotify-control": "^0.1.0",
     "spotify-web-api-js": "^1.2.0",
+    "spotify-web-api-node": "^4.0.0",
     "use-spotify-web-playback-sdk": "^0.2.2"
   },
   "scripts": {
