--- a/package.json
+++ b/package.json
@@ -19,11 +19,14 @@
   },
   "homepage": "https://github.com/kimanikelly/The-Aux#readme",
   "dependencies": {
+    "access-control": "^1.0.1",
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
+    "cors-anywhere": "^0.4.1",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-react-views": "^0.11.0",
+    "http-proxy-middleware": "^1.0.3",
     "mongoose": "^5.8.7",
     "nodemon": "^2.0.2",
     "passport": "^0.4.1",
