--- a/client/package.json
+++ b/client/package.json
@@ -2,7 +2,7 @@
   "name": "spotify-playlist",
   "version": "0.1.0",
   "private": true,
-  "proxy":"http://localhost:3000/auth/spotify",
+  "proxy": "http://localhost:3000",
   "dependencies": {
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
