--- a/package.json
+++ b/package.json
@@ -11,6 +11,9 @@
     "type": "git",
     "url": "git+https://github.com/kimanikelly/The-Aux.git"
   },
+  "engines": {
+    "node": "10.16.0"
+  },
   "keywords": [],
   "author": "",
   "license": "ISC",
