--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "cors-bypass": "^1.3.7",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "express-http-proxy": "^1.6.0",
     "express-react-views": "^0.11.0",
     "http-proxy-middleware": "^1.0.3",
     "mongoose": "^5.8.7",
