--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js",
+    "start": "node server.js concurrently “npm run server” “npm run client",
+    "client":"cd client && npm start",
     "heroku-postbuild":"cd client && npm install && npm run build"
   },
   "repository": {
