--- a/package.json
+++ b/package.json
@@ -7,8 +7,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js",
     "client": "cd client && npm start",
-    "build": "npm run build",
-    "heroku-postbuild": "cd client && npm install && npm run build"
+    "build": "npm run build"
   },
   "repository": {
     "type": "git",
