--- a/package.json
+++ b/package.json
@@ -6,8 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js",
-    "client": "cd client && npm start",
-    "build": "npm run build"
+    "client": "cd client && npm start"
   },
   "repository": {
     "type": "git",
