--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js",
-    "client": "cd client && npm start" 
+    "build": "webpack",
+    "client": "cd client && npm start"
   },
   "repository": {
     "type": "git",
