--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node start server.js",
+    "start": "node server.js",
     "client": "cd client && npm start"
   },
   "repository": {
