--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "start": "node server.js",
     "client": "cd client && npm start"
   },
+  "heroku-run-build-script": true,
   "repository": {
     "type": "git",
     "url": "git+https://github.com/kimanikelly/The-Aux.git"
