--- a/package.json
+++ b/package.json
@@ -6,9 +6,9 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js",
-    "client": "cd client && npm start"
+    "client": "cd client && npm start",
+    "heroku-postbuild": "cd client && npm install && npm run build"
   },
-  "heroku-run-build-script": true,
   "repository": {
     "type": "git",
     "url": "git+https://github.com/kimanikelly/The-Aux.git"
@@ -37,10 +37,14 @@
     "passport-spotify": "^1.1.0",
     "path": "^0.12.7",
     "react": "^16.12.0",
-    "react-dom": "^16.12.0"
+    "react-dom": "^16.12.0",
+    "webpack": "^4.43.0"
   },
   "engines": {
     "node": "10.16.0",
     "npm": "6.14.4"
+  },
+  "devDependencies": {
+    "webpack-cli": "^3.3.11"
   }
 }
