--- a/package.json
+++ b/package.json
@@ -37,14 +37,11 @@
     "passport-spotify": "^1.1.0",
     "path": "^0.12.7",
     "react": "^16.12.0",
-    "react-dom": "^16.12.0",
-    "webpack": "^4.43.0"
+    "react-dom": "^16.12.0"
   },
   "engines": {
     "node": "10.16.0",
     "npm": "6.14.4"
   },
-  "devDependencies": {
-    "webpack-cli": "^3.3.11"
-  }
+  "devDependencies": {}
 }
