--- a/client/package.json
+++ b/client/package.json
@@ -21,6 +21,7 @@
     "use-spotify-web-playback-sdk": "^0.2.2"
   },
   "scripts": {
+    "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
