--- a/package.json
+++ b/package.json
@@ -41,7 +41,8 @@
   },
   "engines": {
     "node": "10.16.0",
-    "npm": "6.14.4"
+    "npm": "6.14.4",
+    "yarn":"1.19.2"
   },
   "devDependencies": {}
 }
