--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "nodemon server.js",
-    "build":"webpack",
+    "build": "webpack",
     "client": "cd client && npm start",
     "heroku-postbuild": "cd client && npm install && npm run build"
   },
@@ -38,7 +38,10 @@
   "engines": {
     "node": "10.16.0",
     "npm": "6.14.4",
-    "yarn":"1.19.2"
+    "yarn": "1.19.2"
   },
-  "devDependencies": {}
+  "devDependencies": {
+    "webpack": "^4.43.0",
+    "webpack-cli": "^3.3.11"
+  }
 }
