--- a/package.json
+++ b/package.json
@@ -39,8 +39,5 @@
     "npm": "6.14.4",
     "yarn": "1.19.2"
   },
-  "devDependencies": {
-    "webpack": "^4.43.0",
-    "webpack-cli": "^3.3.11"
-  }
+  "devDependencies": {}
 }
