Configuring the package.json files for production

--- a/client/package.json
+++ b/client/package.json
@@ -20,6 +20,7 @@
     "spotify-web-api-node": "^4.0.0",
     "use-spotify-web-playback-sdk": "^0.2.2"
   },
+  "proxy": "http://localhost:3000",
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
