--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "nodemon server.js",
     "client": "cd client && npm start",
+    "server": "node server.js",
+    "dev": "concurrently \"npm run server\" \"npm run client\"",
     "heroku-postbuild": "cd client && npm install && npm run build"
   },
   "repository": {
@@ -39,5 +41,7 @@
     "npm": "6.14.4",
     "yarn": "1.19.2"
   },
-  "devDependencies": {}
+  "devDependencies": {
+    "concurrently": "^5.2.0"
+  }
 }
