--- a/client/package.json
+++ b/client/package.json
@@ -26,7 +26,7 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
-  "proxy": "http://localhost:3000",
+  "proxy": "https://the-aux.herokuapp.com/",
   "eslintConfig": {
     "extends": "react-app"
   },
